force-app/main/default/objects/Async_Request__c/fields/Class_To_Instantiate__c.field-meta.xml
<CustomField>
    <fullName>Class_To_Instantiate__c</fullName>
    <description>The name of the class that will be instantiated by the Type class in the Aysnc Factory</description>
    <label>Class To Instantiate</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>