force-app/main/default/objects/Async_Request__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>There was an exception in the execution that that request is removed from the queue</description>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>