force-app/main/default/objects/Async_Request__c/fields/JSON_Data__c.field-meta.xml
<CustomField>
    <fullName>JSON_Data__c</fullName>
    <description>Used of there is  is need to serialize data to JSON across executions</description>
    <label>JSON Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>