force-app/main/default/objects/Async_Request__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Stack trace from exception class</description>
    <label>Stack Trace</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>